Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4869

Mediaplayer: does not disable full screen when end of video playlist is reached

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 4.6.0
    • 4.6.0
    • (Inactive) mmfphonon
    • None
    • 6875d2fa254303a5f68bf434349dcb2210621794

    Description

      QMediaPlayer does not automatically disable full-screen mode when video playback ends. This means that the user sees a black screen, and has to double-tap to get back to the application UI.

      This may be fixed when we implement aboutToFinish and/or playlist support. If not, then (at least on Symbian), either the MediaPlayer app or Phonon itself needs to be modified to disable full screen video when the playlist ends.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fenglich Frans Englich (closed Nokia identity)
            gastockw Gareth Stockwell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes