Does not disable full screen when end of video playlist is reached.

Tested on Symbian and Windows(DS9).

Task-number: QTBUG-4869
Reviewed-by: Gareth Stockwell